remove broken opacity code, fix visibility in css

--- a/app/assets/stylesheets/frontend/styles.scss
+++ b/app/assets/stylesheets/frontend/styles.scss
@@ -334,6 +334,9 @@ a.inverted {
     bottom: 0;
   }
   .bx-wrapper {
+    overflow: hidden;
+    height: 300px;
+
     .bx-viewport {
       background: transparent;
       border: none;
@@ -369,6 +372,9 @@ a.inverted {
 
     .bx-controls {
       padding-top: 85px;
+      .bx-pager {
+        bottom: 5px;
+      }
     }
   }
   .title {
